--- a/start/how-to-get-started/index.html
+++ b/start/how-to-get-started/index.html
@@ -14,6 +14,7 @@
 		
 		<link rel="stylesheet" href="http://amharix.com/css/layout.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/header.css"/>
+		<link rel="stylesheet" href="http://amharix.com/css/text.css"/>
 
 
 	<body>
@@ -67,15 +68,7 @@
 						<p>You may get started right away by signing up and loading down
 the first course, AmhariX 1 - Greetings &amp; Wishes.</p>
 
-<p>This will give you access to the following training materials:</p>
-
-<ul>
-<li>8 Amharic dialogues with 34 grammatical alternatives</li>
-<li>10 Tables with grammar paradigms including approx.100 grammar forms</li>
-<li>12 Tables including 188 structure phrases</li>
-<li>Glossary including 40 items</li>
-<li>Audio Language Training with 5 hours of recordnings</li>
-</ul>
+<script type="text/javascript" src="//static.mailerlite.com/data/webforms/378200/u2j8e8.js?v1"></script>
 
 					
 				</main>
