--- a/start/amharix/index.html
+++ b/start/amharix/index.html
@@ -63,7 +63,13 @@
 </ul></li>
 </ul></li>
 </ul></li>
-<li><a href="#amharix-amharic-phrase-grammar-training">AmhariX - Amharic Phrase &amp; Grammar Training</a></li>
+<li><a href="#amharix">AmhariX</a>
+<ul>
+<li>
+<ul>
+<li><a href="#amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</a></li>
+</ul></li>
+</ul></li>
 </ul>
 </nav>
 				
@@ -74,7 +80,9 @@
 
 <h5 id="welcome-to">Welcome to</h5>
 
-<h1 id="amharix-amharic-phrase-grammar-training">AmhariX - Amharic Phrase &amp; Grammar Training</h1>
+<h1 id="amharix">AmhariX</h1>
+
+<h3 id="amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</h3>
 
 <blockquote>
 <p>”There has never been a better time to start learning Amharic. And these materials will enable you to succeed and reach your goal.”</p>
