--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
 </ul></li>
 </ul></li>
 </ul></li>
-<li><a href="#amharix-amharic-phrase-grammar-training">AmhariX - Amharic Phrase &amp; Grammar Training</a></li>
+<li><a href="#amharix">AmhariX</a>
+<ul>
+<li>
+<ul>
+<li><a href="#amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</a></li>
+</ul></li>
+</ul></li>
 </ul>
 </nav>
 				
@@ -75,7 +81,9 @@
 
 <h5 id="welcome-to">Welcome to</h5>
 
-<h1 id="amharix-amharic-phrase-grammar-training">AmhariX - Amharic Phrase &amp; Grammar Training</h1>
+<h1 id="amharix">AmhariX</h1>
+
+<h3 id="amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</h3>
 
 <blockquote>
 <p>”There has never been a better time to start learning Amharic. And these materials will enable you to succeed and reach your goal.”</p>
@@ -221,51 +229,35 @@
 <h4 id="series-1-meeting-people">Series #1, Meeting People</h4>
 
 <ul>
-<li><p>AmhariX 1, Greetings &amp; Wishes</p></li>
-
-<li><p>AmhariX 2, Introducing Family Members &amp; Friends</p></li>
-
-<li><p>AmhariX 3, At Work - Professions &amp; Occupations</p></li>
-
-<li><p>AmhariX 4, Nations, Nationalities &amp; Languages</p></li>
-
-<li><p>AmhariX 5, Language Learning &amp; Understanding</p></li>
-
-<li><p>AmhariX 6, First Time Meetings</p></li>
+<li>AmhariX 1, Greetings &amp; Wishes</li>
+<li>AmhariX 2, Introducing Family Members &amp; Friends</li>
+<li>AmhariX 3, At Work - Professions &amp; Occupations</li>
+<li>AmhariX 4, Nations, Nationalities &amp; Languages</li>
+<li>AmhariX 5, Language Learning &amp; Understanding</li>
+<li>AmhariX 6, First Time Meetings</li>
 </ul>
 
 <h4 id="series-2-eating-together">Series #2, Eating Together</h4>
 
 <ul>
-<li><p>AmhariX 7, Groceries, Quantities, Prices</p></li>
-
-<li><p>AmhariX 8, Meeting for Breakfast</p></li>
-
-<li><p>AmhariX 9, Meeting for Lunch</p></li>
-
-<li><p>AmhariX 10, Meeting for Coffee</p></li>
-
-<li><p>AmhariX 11, Meeting for Dinner</p></li>
-
-<li><p>AmhariX 12, Peparing a Meal Together</p></li>
+<li>AmhariX 7, Groceries, Quantities, Prices</li>
+<li>AmhariX 8, Meeting for Breakfast</li>
+<li>AmhariX 9, Meeting for Lunch</li>
+<li>AmhariX 10, Meeting for Coffee</li>
+<li>AmhariX 11, Meeting for Dinner</li>
+<li>AmhariX 12, Peparing a Meal Together</li>
 </ul>
 
 <h4 id="series-3-getting-around">Series #3, Getting Around</h4>
 
 <ul>
 <li>AmhariX 13, Arriving in Ethiopia</li>
-
-<li><p>AmhariX 14, At the hotel</p></li>
-
-<li><p>AmhariX 15, Appointments, time &amp; time expressions</p></li>
-
-<li><p>AmhariX 16, Sightseeing</p></li>
-
-<li><p>AmhariX 17, Shopping, money &amp; prices</p></li>
-
-<li><p>AmhariX 18, In the hospital</p></li>
-
-<li><p>AmhariX 18, Travelling across the country</p></li>
+<li>AmhariX 14, At the hotel</li>
+<li>AmhariX 15, Appointments, time &amp; time expressions</li>
+<li>AmhariX 16, Sightseeing</li>
+<li>AmhariX 17, Shopping, money &amp; prices</li>
+<li>AmhariX 18, In the hospital</li>
+<li>AmhariX 18, Travelling across the country</li>
 </ul>
 
 <script type="text/javascript" src="//static.mailerlite.com/data/webforms/378200/u2j8e8.js?v1"></script>
