--- a/start/index.html
+++ b/start/index.html
@@ -13,6 +13,7 @@
 		<link href="http://amharix.com/start/index.xml" rel="alternate" type="application/rss+xml" title="AmhariX" />
 		
 		<link rel="stylesheet" href="http://amharix.com/css/layout.css"/>
+		<link rel="stylesheet" href="http://amharix.com/css/layout-wide.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/header.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/text.css"/>
 
@@ -46,7 +47,7 @@
 
 
 
-			<article id="amharix" class="mode-body" style="text-align: center; background: none;">
+			<article id="amharix" class="mode-body" style="text-align: center; background: none; font-size: 1.6em;">
 
 				
 				<nav id="TableOfContents">
