--- a/start/amharix/index.html
+++ b/start/amharix/index.html
@@ -13,6 +13,7 @@
 		<link href="" rel="alternate" type="application/rss+xml" title="AmhariX" />
 		
 		<link rel="stylesheet" href="http://amharix.com/css/layout.css"/>
+		<link rel="stylesheet" href="http://amharix.com/css/layout-wide.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/header.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/text.css"/>
 
@@ -45,7 +46,7 @@
 
 
 
-			<article id="amharix" class="mode-body" style="text-align: center; background: none;">
+			<article id="amharix" class="mode-body" style="text-align: center; background: none; font-size: 1.6em;">
 
 				
 				<nav id="TableOfContents">
