--- a/start/what-is-amharix/index.html
+++ b/start/what-is-amharix/index.html
@@ -13,6 +13,7 @@
 		<link href="" rel="alternate" type="application/rss+xml" title="AmhariX" />
 		
 		<link rel="stylesheet" href="http://amharix.com/css/layout.css"/>
+		<link rel="stylesheet" href="http://amharix.com/css/layout-wide.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/header.css"/>
 		<link rel="stylesheet" href="http://amharix.com/css/text.css"/>
 
