--- a/start/amharix/index.html
+++ b/start/amharix/index.html
@@ -77,10 +77,10 @@
 <h2 id="amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</h2>
 
 <blockquote>
-<p>”There has never been a better time to start learning Amharic. And these materials will enable you to succeed and reach your goal.”</p>
+<p>”There has never been a better time to start learning Amharic, and these materials will enable you to succeed.&rdquo;</p>
 </blockquote>
 
-<p>by Egmont Mika</p>
+<p>By Egmont Mika</p>
 
 					
 				</main>
