--- a/start/is-this-you/index.html
+++ b/start/is-this-you/index.html
@@ -82,13 +82,14 @@
 						
 
 <ul>
-<li>You are already familiar with the Amharic script, but you still  want to be able to read, write and speak Amharic.</li>
+<li>You are familiar with the Amharic script, but you do not read, write and speak Amharic fluently.</li>
 <li>You want to learn more Amharic words and phrases and  be able to recall them spontaneously in a conversation.</li>
-<li>You want to understand the grammatical structure and be  able to alter words and phrases in a grammatically correct way.</li>
-<li>Your goal is to master Amharic in every day conversation  and to commmunicate fluently.</li>
+<li>You want to be able to alter words and phrases in a grammatically correct way.</li>
+<li>You want to speak fluently with good Amharic pronunciation.</li>
+<li>Your goal is to master Amharic in writing, reading and every day conversation.</li>
 </ul>
 
-<p>Is this what you want? -</p>
+<p>Is this what you want?</p>
 
 <h4 id="then-amharix-is-for-you">Then AmhariX is for you.</h4>
 
