--- a/start/what-is-amharix/index.html
+++ b/start/what-is-amharix/index.html
@@ -83,24 +83,24 @@
 					
 						
 
-<p>AmhariX is a learning and training programme for the Amharic language under development.</p>
+<p>AmhariX is a learning and training programme for the Amharic language. This programme is under constant development.</p>
 
 <p>It is free of charge.</p>
 
 <p>When completed, the entire project will comprise three series with 18 courses, in total.</p>
 
-<p>Each course will contain dialogues, grammar paradigms, structure sentences, glossary and audio recordings for oral training.</p>
+<p>Each course contains dialogues, grammar paradigms, structure sentences, glossary and audio recordings for oral training.</p>
 
-<p>Moreover, all AmhariX courses will be linked to Memrise, a digital tool for effective language learning.</p>
+<p>Moreover, all AmhariX courses are linked to Memrise, a digital tool for effective language learning.</p>
 
-<p>Here are the courses:</p>
+<p>These are the courses:</p>
 
 <h4 id="series-1-meeting-people">Series #1, Meeting People</h4>
 
 <ul>
 <li>AmhariX 1, Greetings &amp; Wishes</li>
 <li>AmhariX 2, Introducing Family Members &amp; Friends</li>
-<li>AmhariX 3, At Work - Professions &amp; Occupations</li>
+<li>AmhariX 3, At Work/Professions &amp; Occupations</li>
 <li>AmhariX 4, Nations, Nationalities &amp; Languages</li>
 <li>AmhariX 5, Language Learning &amp; Understanding</li>
 <li>AmhariX 6, First Time Meetings</li>
@@ -109,7 +109,7 @@
 <h4 id="series-2-eating-together">Series #2, Eating Together</h4>
 
 <ul>
-<li>AmhariX 7, Groceries, Quantities, Prices</li>
+<li>AmhariX 7, Groceries/Quantities &amp; Prices</li>
 <li>AmhariX 8, Meeting for Breakfast</li>
 <li>AmhariX 9, Meeting for Lunch</li>
 <li>AmhariX 10, Meeting for Coffee</li>
@@ -121,12 +121,12 @@
 
 <ul>
 <li>AmhariX 13, Arriving in Ethiopia</li>
-<li>AmhariX 14, At the hotel</li>
-<li>AmhariX 15, Appointments, time &amp; time expressions</li>
+<li>AmhariX 14, At the Hotel</li>
+<li>AmhariX 15, Appointments/Times &amp; Time expressions</li>
 <li>AmhariX 16, Sightseeing</li>
-<li>AmhariX 17, Shopping, money &amp; prices</li>
-<li>AmhariX 18, In the hospital</li>
-<li>AmhariX 18, Travelling across the country</li>
+<li>AmhariX 17, Shopping/Money &amp; Prices</li>
+<li>AmhariX 18, The Human Body/In the Hospital</li>
+<li>AmhariX 18, Travelling</li>
 </ul>
 
 <script type="text/javascript" src="//static.mailerlite.com/data/webforms/378200/u2j8e8.js?v1"></script>
