--- a/start/what-is-available/index.html
+++ b/start/what-is-available/index.html
@@ -71,11 +71,11 @@
 <p>It contains the following training materials:</p>
 
 <ul>
-<li>8 Amharic dialogues with 34 grammatical alternatives</li>
-<li>10 Tables with grammar paradigms including approx.100 grammar forms</li>
-<li>12 Tables including 188 structure phrases</li>
+<li>8 Amharic dialogues with 34 alternatives</li>
+<li>10 Tables with grammar paradigms including 100 items</li>
+<li>12 Tables with structure phrases including 188 items</li>
 <li>Glossary including 40 items</li>
-<li>Audio Language Training with 5 hours of recordnings</li>
+<li>Audio Language Training with 5 hours of recordings</li>
 </ul>
 
 <script type="text/javascript" src="//static.mailerlite.com/data/webforms/378200/u2j8e8.js?v1"></script>
