--- a/start/how-to-get-started/index.html
+++ b/start/how-to-get-started/index.html
@@ -66,8 +66,8 @@
 
 				<main>
 					
-						<p>You may get started right away by signing up and loading down
-the first course, AmhariX 1 - Greetings &amp; Wishes.</p>
+						<p>You may get started today. Just click the green register button and you will receive
+the first course, AmhariX 1 - Greetings &amp; Wishes, for free.</p>
 
 <script type="text/javascript" src="//static.mailerlite.com/data/webforms/378200/u2j8e8.js?v1"></script>
 
