--- a/start/index.html
+++ b/start/index.html
@@ -78,10 +78,10 @@
 <h2 id="amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</h2>
 
 <blockquote>
-<p>”There has never been a better time to start learning Amharic. And these materials will enable you to succeed and reach your goal.”</p>
+<p>”There has never been a better time to start learning Amharic, and these materials will enable you to succeed.&rdquo;</p>
 </blockquote>
 
-<p>by Egmont Mika</p>
+<p>By Egmont Mika</p>
 
 					
 				</main>
@@ -141,7 +141,7 @@
 				</header>
 
 
-				<div class="self-link"><a href="http://amharix.com/start/what-is-amharix/"><span></span></a></div>
+				<div class="self-link truncated"><a href="http://amharix.com/start/what-is-amharix/"><span></span></a></div>
 
 
 
