--- a/start/is-this-you/index.html
+++ b/start/is-this-you/index.html
@@ -82,7 +82,7 @@
 						
 
 <ul>
-<li>You are familiar with the Amharic script, but you do not read, write and speak Amharic fluently.</li>
+<li>You are familiar with the Amharic script, but you do not read, write and speak Amharic fluently. Not yet.</li>
 <li>You want to learn more Amharic words and phrases and  be able to recall them spontaneously in a conversation.</li>
 <li>You want to be able to alter words and phrases in a grammatically correct way.</li>
 <li>You want to speak fluently with good Amharic pronunciation.</li>
