--- a/start/what-is-amharix/index.html
+++ b/start/what-is-amharix/index.html
@@ -83,17 +83,15 @@
 					
 						
 
-<p>AmhariX is a learning and training programme for the Amharic language. This programme is under constant development.</p>
-
-<p>It is free of charge.</p>
+<p>The AmhariX project is developing a learning and training programme for the Amharic language. As long as under development, it is free of charge.</p>
 
 <p>When completed, the entire project will comprise three series with 18 courses, in total.</p>
 
-<p>Each course contains dialogues, grammar paradigms, structure sentences, glossary and audio recordings for oral training.</p>
+<p>Each course will contain dialogues, grammar paradigms, structure sentences, glossary and audio recordings for oral training.</p>
 
 <p>Moreover, all AmhariX courses are linked to Memrise, a digital tool for effective language learning.</p>
 
-<p>These are the courses:</p>
+<p>These are the planned courses:</p>
 
 <h4 id="series-1-meeting-people">Series #1, Meeting People</h4>
 
