--- a/start/what-is-amharix/index.html
+++ b/start/what-is-amharix/index.html
@@ -118,12 +118,11 @@
 <h4 id="series-3-getting-around">Series #3, Getting Around</h4>
 
 <ul>
-<li>AmhariX 13, Arriving in Ethiopia</li>
-<li>AmhariX 14, At the Hotel</li>
-<li>AmhariX 15, Appointments/Times &amp; Time expressions</li>
-<li>AmhariX 16, Sightseeing</li>
-<li>AmhariX 17, Shopping/Money &amp; Prices</li>
-<li>AmhariX 18, The Human Body/In the Hospital</li>
+<li>AmhariX 13, Arriving / At the Hotel</li>
+<li>AmhariX 14, Appointments/Times &amp; Time expressions</li>
+<li>AmhariX 15, Sightseeing</li>
+<li>AmhariX 16, Shopping/Money &amp; Prices</li>
+<li>AmhariX 17, The Human Body/In the Hospital</li>
 <li>AmhariX 18, Travelling</li>
 </ul>
 
