--- a/start/amharix/index.html
+++ b/start/amharix/index.html
@@ -77,7 +77,7 @@
 <h2 id="amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</h2>
 
 <blockquote>
-<p>”There has never been a better time to start learning Amharic, and these drilling materials will enable you to succeed.&rdquo;</p>
+<p>”There has never been a better time to start learning Amharic, and this tool for language drilling will enable you to succeed.&rdquo;</p>
 </blockquote>
 
 <p>By Egmont Mika</p>
