--- a/start/how-to-get-started/index.html
+++ b/start/how-to-get-started/index.html
@@ -67,7 +67,9 @@
 				<main>
 					
 						<p>You may get started today. Just click the green register button and you will receive
-the first course, AmhariX 1 - Greetings &amp; Wishes, for free.</p>
+the first course, AmhariX 1 - Greetings &amp; Wishes, as pdf and sound files within 1-2 days.</p>
+
+<p>It&rsquo;s free of charge.</p>
 
 <script type="text/javascript" src="//static.mailerlite.com/data/webforms/378200/u2j8e8.js?v1"></script>
 
