--- a/start/amharix/index.html
+++ b/start/amharix/index.html
@@ -60,7 +60,7 @@
 </ul></li>
 <li><a href="#amharix">AmhariX</a>
 <ul>
-<li><a href="#amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</a></li>
+<li><a href="#amharic-pattern-training">Amharic Pattern Training</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -74,10 +74,10 @@
 
 <h1 id="amharix">AmhariX</h1>
 
-<h2 id="amharic-phrase-grammar-training">Amharic Phrase &amp; Grammar Training</h2>
+<h2 id="amharic-pattern-training">Amharic Pattern Training</h2>
 
 <blockquote>
-<p>”There has never been a better time to start learning Amharic, and this tool for systematic language drilling will enable you to succeed.&rdquo;</p>
+<p>”There has never been a better time to start learning Amharic, and this tool for systematic language training will enable you to succeed.&rdquo;</p>
 </blockquote>
 
 <p>By Egmont Mika</p>
