--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </ul></li>
 <li><a href="#amharix">AmhariX</a>
 <ul>
-<li><a href="#amharic-pattern-training">Amharic Pattern Training</a></li>
+<li><a href="#amharic-phrase-and-grammar-training">Amharic Phrase And Grammar Training</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -75,7 +75,7 @@
 
 <h1 id="amharix">AmhariX</h1>
 
-<h2 id="amharic-pattern-training">Amharic Pattern Training</h2>
+<h2 id="amharic-phrase-and-grammar-training">Amharic Phrase And Grammar Training</h2>
 
 <blockquote>
 <p>”There has never been a better time to start learning Amharic, and this tool for systematic language training will enable you to succeed.&rdquo;</p>
